# mnemos

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  DESIGN.md  Dockerfile  FEDERATION.md  LICENSE-COMMERCIAL  README.md  cli.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 2026_03_15_0841-688fbe55788c_add_oauth_clients.py  2026_03_15_1731-3bf8f4d8e272_drop_client_hostname.py  2026_03_16_0001-7fbcd2675d42_.py  2026_03_16_0017-a12f599fb029_migrate_legacy_memory_types.py  2026_03_17_0001-a1b2c3d4e5f6_multi_user_workspace.py  2026_03_18_0001-a1b2c3d4e5f6_stage1_users.py  2026_03_18_0002-d4e5f6a1b2c3_stage2_workspaces.py  2026_03_18_0003-e5f6a1b2c3d4_workspace_unique_name.py  2026_03_19_0037-8003821c0323_.py  2026_03_19_1334-8f44baaf5579_init.py  2026_03_20_0001-a1b2c3d4e5f6_add_revoked_tokens.py  2026_03_22_2300-b942da1196f0_email.py  2026_04_08_0001-c1d2e3f4a5b6_invite_role.py  2026_04_08_0002-f8c1fc9be252_add_memory_name.py
scripts/: download_model.py  reembed.py
src/memlord/: auth.py  config.py  db.py  email.py  embeddings.py  main.py  oauth.py  search.py  server.py
src/memlord/api/: __init__.py  memories.py  (+2 more)
src/mnemos/: auth.py  auth_context.py  config.py  db.py  embeddings.py  main.py  middleware.py  oauth.py  search.py  server.py  ui.py
tests/: conftest.py  test_created_at_tz.py  test_dao.py  test_data.py  test_move.py  test_oauth.py  test_pipeline.py  test_rest_pipeline.py  test_search.py  test_user_dao.py  test_workspace_isolation.py
(+122 files in other folders)
